# pomodoro

./: .gitignore  Cargo.toml  README.md  flash_softdevice.sh  memory.x
.cargo/: config.toml
src/: main.rs
src/lib/: flash_storage.rs  mod.rs  types.rs
src/lib/ble/: sd.rs  server.rs  services.rs
src/lib/device/: microbit.rs  mod.rs
src/lib/display/: bitmaps.rs  mod.rs  types.rs
