[package]
authors = ["Kentaro Okuda <lonesometraveler@mac.com>"]
name = "microbit-pomodoro"
edition = "2021"
version = "0.1.0"

[lib]
harness = false
path = "src/lib/mod.rs"

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "*", features = ["nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "*", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "*", features = ["nightly", "defmt"] }
embassy-futures = { version = "*" }
embassy-nrf = { version = "*", features = ["nightly", "time-driver-rtc1", "defmt", "gpiote", "unstable-traits", "nrf52833"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["defmt", "ble-gatt-server", "ble-peripheral", "critical-section-impl", "s140", "nrf52833"] }
futures = { version = "0.3.5", default-features = false }
heapless = { version = "0.7.16", features = ["defmt-impl"] }
static_cell = "1.0.0"
embedded-hal = "1.0.0-alpha.9"
postcard = { version = "1.0.2", features = ["use-defmt"] }
serde = { version = "1.0.*", default-features = false }
embedded-storage-async = "0.3.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ebc735008f0b1725b22c944cc5f95fe1aacc665b" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "ebc735008f0b1725b22c944cc5f95fe1aacc665b" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ebc735008f0b1725b22c944cc5f95fe1aacc665b" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "ebc735008f0b1725b22c944cc5f95fe1aacc665b" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "ebc735008f0b1725b22c944cc5f95fe1aacc665b" }
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
